# cfms_client_tauri

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  prek.toml  vite.config.js  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  changelog.yml  ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: constants.rs  error.rs  lib.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  config.rs  dek.rs  kdf.rs  lib.rs
crates/crypto/tests/: integration.rs
crates/service/: Cargo.toml
crates/service/src/: extensions.rs  lib.rs  state.rs  user_preferences.rs
crates/service/src/db/: migrate.rs  mod.rs  schema.rs  settings.rs  tasks.rs
crates/service/src/scan/: mod.rs
crates/service/src/service/: manager.rs  mod.rs
crates/service/src/services/: connection.rs  download_queue.rs  favorites.rs  lockdown.rs  mod.rs  rpc.rs  server_push.rs  task_persistence.rs  token_refresh.rs
crates/service/tests/: db_tests.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: chunks.rs  decrypt.rs  download.rs  lib.rs  upload.rs  verify.rs
crates/transfer/tests/: integration.rs
crates/transport/: Cargo.toml
crates/transport/src/: connector.rs  frame.rs  lib.rs  proxy.rs  stream.rs  tls.rs
crates/transport/tests/: integration.rs
extensions/: README.md
extensions/examples/file-stats/: manifest.json
extensions/examples/file-stats/pages/: overview.json
extensions/examples/file-stats/workflows/: account.json
scripts/: check-unused-i18n.mjs  check-unused-i18n.test.mjs  client-version.mjs  embed-font-assets.mjs  release-notes.mjs  validate-android-release.py
scripts/tests/: test_validate_android_release.py
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/i18n/: en.ftl  zh_CN.ftl
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  commands.rs  lib.rs  localization.rs  main.rs
src-tauri/src/commands/: admin.rs  auth_connection.rs  avatars.rs  browsing.rs  documents.rs  downloads.rs  extensions.rs  health.rs  mobile.rs  passkeys.rs  preferences.rs  settings.rs  shared_helpers.rs  task_reload.rs  transfer_helpers.rs  types.rs  updates.rs
src/lib/: access-entries.ts  access-grants.ts  access-rules.ts  api.ts  app-info.ts  app-lock.svelte.ts  app-update-state.svelte.ts  appearance.svelte.ts  appearance.test.ts  appearance.ts  auth-transition.test.ts  auth-transition.ts  changelog.ts  date-time.test.ts  date-time.ts  debug-latency.svelte.ts  debug-timing.svelte.ts  dialogs.svelte.ts  directory-picker.test.ts  directory-picker.ts  download-batch-control.ts  download-task-groups.ts  events.ts  extension-workflows.ts  extensions.svelte.ts  feature-flags.ts  file-browser.ts  file-preferences.ts  i18n.ts  icons.ts  identifiers.ts  image-documents.ts  keyboard.test.ts  keyboard.ts  markdown.ts  navigation.ts  open-external.ts  path-format.ts  platform.test.ts  platform.ts  (+9 more)
src/lib/api/: admin.test.ts  admin.ts  auth.ts  avatars.ts  core.ts  downloads.ts  extensions.ts  files.ts  mobile.ts  preferences.ts  server-errors.test.ts  server-errors.ts  settings.ts  trash.ts  types.ts
src/lib/changelog/: CHANGELOG.md
src/lib/components/: AccessDeniedDialog.svelte  AccessDeniedDialog.test.ts  AccessDeniedNotice.svelte  AccessDeniedNotice.test.ts  AccessRulesManager.svelte  AccountBadge.svelte  AccountDisabledNotice.svelte  AccountDisabledNotice.test.ts  AppLockOverlay.svelte  AppPinPad.svelte  AppUpdateChecker.svelte  AuthServerContext.svelte  AuthServerContext.test.ts  AuthorizeAccessDialog.svelte  AvatarPreview.svelte  BlockUserDialog.svelte  Breadcrumb.svelte  ChangePasswordDialog.svelte  ChangelogPanel.svelte  ContextMenu.svelte  ContextMenu.test.ts  CorruptedPreferenceDialog.svelte  CreateUserAccountDialog.svelte  CreateUserGroupDialog.svelte  DebugLatencyOverlay.svelte  DebugTimingOverlay.svelte  DialogActionButton.svelte  DialogActionButton.test.ts  DialogHost.svelte  DialogHost.test.ts  DownloadProgress.svelte  DownloadTaskCard.svelte  DownloadTaskGroupHeader.svelte  ExtensionPageRenderer.svelte  HomeRecordPanel.svelte  Icon.svelte  IconButton.svelte  KeyboardShortcutHelp.svelte  LockdownBanner.svelte  LockdownControl.svelte  (+33 more)
src/lib/components/explorer/: ExplorerCommandBar.svelte  ExplorerCommandBar.test.ts  ExplorerDetailsPane.svelte  ExplorerStatusBar.svelte
src/lib/components/files/: FileTable.svelte  FileTable.test.ts
src/lib/explorer/: file-selection.test.ts  file-selection.ts  marquee-selection.test.ts  marquee-selection.ts  types.ts
src/lib/files/: directory-load-controller.test.ts  directory-load-controller.ts  document-types.test.ts  document-types.ts  file-manager-navigation.test.ts  file-manager-navigation.ts  file-sort.worker.ts  formatting.test.ts  formatting.ts  progressive-listing.test.ts  progressive-listing.ts  revision-graph.ts  sort-worker-client.test.ts  sort-worker-client.ts  sorting.ts  upload-conflicts.test.ts  upload-conflicts.ts  upload-names.ts
src/lib/i18n/messages/: en.ts  zh-CN.ts
src/lib/motion/: actions.ts  transitions.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/admin/: +page.svelte
src/routes/connect/: +page.svelte
src/routes/connect/disclaimer/: +page.svelte
src/routes/downloads/: +page.svelte
src/routes/explorer/: +page.svelte
src/routes/home/: +layout.svelte  +page.svelte
src/routes/home/about/: +page.svelte
src/routes/home/extensions/view/: +page.svelte
src/routes/home/files/: +page.svelte
src/routes/home/manage/: +page.svelte
src/routes/home/more/: +page.svelte
src/routes/home/overview/: +page.svelte
src/routes/home/settings/: +page.svelte
src/routes/home/settings/account/: +page.svelte
src/routes/home/tasks/: +page.svelte
src/routes/home/trash/: +page.svelte
src/routes/init/: +page.svelte
src/routes/lockdown/: +page.svelte
src/routes/login/: +page.svelte
static/fonts/: fonts.css
(+14 files in other folders)
