[workspace]
members = [
    "src-tauri",
    "crates/core",
    "crates/crypto",
    "crates/transport",
    "crates/transfer",
    "crates/service",
]
resolver = "2"

[workspace.package]
version = "0.25.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cfms-dev/cfms_client_tauri"

[workspace.dependencies]
# ---------------------------------------------------------------------------
# Internal crates
# ---------------------------------------------------------------------------
cfms-core = { path = "crates/core" }
cfms-crypto = { path = "crates/crypto" }
cfms-transport = { path = "crates/transport" }
cfms-transfer = { path = "crates/transfer" }
cfms-service = { path = "crates/service" }

# ---------------------------------------------------------------------------
# Serialization
# ---------------------------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"

# ---------------------------------------------------------------------------
# Error handling
# ---------------------------------------------------------------------------
thiserror = "1"

# ---------------------------------------------------------------------------
# Cryptography
# ---------------------------------------------------------------------------
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64ct = { version = "1", features = ["alloc"] }

# ---------------------------------------------------------------------------
# Database
# ---------------------------------------------------------------------------
rusqlite = { version = "0.31", features = ["bundled"] }
memmap2 = "0.9"
tempfile = "3"

# ---------------------------------------------------------------------------
# Async runtime & networking
# ---------------------------------------------------------------------------
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "connect",
    "rustls-tls-webpki-roots",
] }
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
tokio-socks = "0.5"
tokio-rustls = "0.26"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
tracing = { version = "0.1", features = ["log"] }
url = "2"
dashmap = "5"
fluent-bundle = "0.15"
unic-langid = "0.9"

# ---------------------------------------------------------------------------
# Tauri
# ---------------------------------------------------------------------------
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-background-service = "0.7"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
async-trait = "0.1"
