[package]
name = "cfms-client-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CFMS Client — Tauri v2 desktop application"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cfms_client_tauri_lib"
# Desktop development only needs the Rust library crate. Building the mobile
# staticlib/cdylib targets with the Windows GNU linker currently fails with
# "export ordinal too large"; restore those crate types for mobile packaging
# or build with an MSVC linker installed.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cfms-core.workspace = true
cfms-crypto.workspace = true
cfms-transport.workspace = true
cfms-service.workspace = true
cfms-transfer.workspace = true
tauri.workspace = true
tauri-plugin-opener = "2"
tauri-plugin-notification.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
hex = "0.4.3"
tauri-plugin-log = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-background-service.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
