[package]
name = "cfms-client-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CFMS Client — Tauri v2 desktop application"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cfms_client_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cfms-core.workspace = true
cfms-crypto.workspace = true
cfms-transport.workspace = true
cfms-service.workspace = true
cfms-transfer.workspace = true
tauri.workspace = true
tauri-plugin-opener = "2"
tauri-plugin-dialog.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-updater.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
hex = "0.4.3"
reqwest.workspace = true
semver.workspace = true
url.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true
tauri-plugin-log = "2"
tauri-plugin-background-service.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
