[package]
name = "cfms-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfms-core.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
zeroize.workspace = true
base64ct.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
hex = "0.4"
